# sanskrit-skills

./: .gitignore  README.md  SKILL.md
kosha/: SKILL.md
kosha/references/: amarakosha.md  linganushasana.md
sahitya/: SKILL.md
sahitya/references/: authors.md
sanskrit-skills/: SKILL.md
sanskrit-skills/kosha/: SKILL.md
sanskrit-skills/kosha/references/: nirukta.md  paryaya.md
sanskrit-skills/sahitya/: SKILL.md
sanskrit-skills/sahitya/references/: mahakavyas.md  natakas.md  rasa.md
sanskrit-skills/shared/: SKILL.md  devanagari.md  online-resources.md  terminology.md  transliteration.md
sanskrit-skills/shared/scripts/: chandas.py  dhatu.py  prakriya.py  sandhi.py  transliterate.py
sanskrit-skills/shared/scripts/tests/: golden_dhatu.json  golden_sandhi.json  test_chandas.py  test_dhatu_cli.py  test_goldens.py  test_prakriya_cli.py  (+1 more)
sanskrit-skills/sloka/: SKILL.md
sanskrit-skills/sloka/references/: commentators.md
sanskrit-skills/stotra/: SKILL.md
sanskrit-skills/stotra/references/: composers.md  devi-stotras.md
sanskrit-skills/vyakarana/: SKILL.md
sanskrit-skills/vyakarana/references/: lakara.md  pratyaya.md  sandhi.md  vibhakti.md
shared/: online-resources.md
shared/scripts/: pyproject.toml  sandhi.py  transliterate.py
shared/scripts/tests/: golden_chandas.json  golden_sandhi.json  test_chandas.py
sloka-analysis/: SKILL.md
sloka-analysis/references/: alankaras.md  chandas.md
stotra/: SKILL.md
stotra/references/: shiva-stotras.md  vishnu-stotras.md
vyakarana/: SKILL.md
vyakarana/references/: dhatu.md  samasa.md  sandhi.md
